# Ops2

./: CMakeLists.txt  CMakePresets.json  cmake-build.cmd  cmake-configure.cmd  vcpkg.json
.github/workflows/: win64.yml
src/: command_host.hpp  ops2.cpp
